erDiagram
    USER ||--o{ PORTFOLIO : "owns"
    USER ||--o| EMERGENCY_FUND : "configures"
    USER ||--o{ SAVINGS_GOAL : "sets"
    PORTFOLIO ||--o{ ASSET : "contains"
    PORTFOLIO ||--o{ VALUATION_SNAPSHOT : "has history"
    PORTFOLIO ||--o{ TARGET_ALLOCATION : "has allocations"
    ASSET ||--o{ TRANSACTION : "records"
    ASSET }o--o| INSTRUMENT : "valued by"
    INSTRUMENT ||--o{ PRICE_QUOTE : "has quotes"
    EMERGENCY_FUND ||--o{ EMERGENCY_FUND_ASSET : "designates"
    ASSET ||--o{ EMERGENCY_FUND_ASSET : "belongs to"

    USER {
        uuid id PK
        string email
        string display_name
        string base_currency
    }
    PORTFOLIO {
        uuid id PK
        uuid user_id FK
        string name
        bool archived
    }
    ASSET {
        uuid id PK
        uuid portfolio_id FK
        string asset_class
        string valuation_mode "Market Manual CurrencyValued (M1.4)"
        string name
        string currency
        numeric quantity
        numeric manual_value "set only when valuation_mode=Manual"
        date manual_value_date
        uuid instrument_id FK "set only when valuation_mode=Market"
    }
    TRANSACTION {
        uuid id PK
        uuid asset_id FK
        string type "Buy Sell Deposit Withdraw Dividend Interest Fee"
        numeric quantity
        numeric unit_price
        numeric fee
        string currency
        date executed_at
    }
    INSTRUMENT {
        uuid id PK
        string ticker
        string name
        string source "Nbp Stooq CoinGecko"
        string currency
        string asset_class
    }
    PRICE_QUOTE {
        uuid id PK
        uuid instrument_id FK
        date quote_date UK
        numeric close_price
    }
    FX_RATE {
        uuid id PK
        string base_currency UK
        string quote_currency UK
        date rate_date UK
        numeric rate
    }
    VALUATION_SNAPSHOT {
        uuid id PK
        uuid portfolio_id FK
        date snapshot_date UK
        numeric total_value_base
        jsonb breakdown_by_class
    }
    TARGET_ALLOCATION {
        uuid id PK
        uuid portfolio_id FK "null = total wealth"
        uuid user_id FK
        string asset_class
        numeric target_percent
        numeric tolerance_band
    }
    EMERGENCY_FUND {
        uuid id PK
        uuid user_id FK
        numeric monthly_expenses
        int target_months
    }
    EMERGENCY_FUND_ASSET {
        uuid emergency_fund_id FK
        uuid asset_id FK
    }
    SAVINGS_GOAL {
        uuid id PK
        uuid user_id FK
        string name
        numeric target_amount
        date target_date
        uuid portfolio_id FK "optional"
    }
